# forecasting

./: .gitignore  README.md
client/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  main.cpp
client/lib/: net-client-server
client/lib/net-client-server/: libnet.hpp
client/lib/net-client-server/include/: net_connection.hpp
client/lib/net-client-server/lib/asio-1.18.1/: CMakeLists.txt
client/lib/net-client-server/lib/asio-1.18.1/include/asio/detail/: executor_function.hpp  resolver_service.hpp  socket_types.hpp
client/lib/net-client-server/lib/asio-1.18.1/include/asio/experimental/: as_single.hpp
client/lib/net-client-server/lib/asio-1.18.1/include/asio/impl/: awaitable.hpp  buffered_read_stream.hpp  buffered_write_stream.hpp  write_at.hpp
client/test/: CMakeLists.txt  main.cpp  test.cpp  test.h
net-client-server/: CMakeLists.txt  libnet.hpp
net-client-server/include/: net_client.hpp  net_connection.hpp  net_message.hpp  net_server.hpp  net_tsqueue.hpp
net-client-server/lib/asio-1.18.1/include/asio/: basic_signal_set.hpp  strand.hpp  version.hpp
net-client-server/lib/asio-1.18.1/include/asio/detail/: bind_handler.hpp  config.hpp  thread.hpp
net-client-server/lib/asio-1.18.1/include/asio/detail/impl/: socket_ops.ipp
net-client-server/lib/asio-1.18.1/include/asio/execution/: any_executor.hpp  executor.hpp
net-client-server/lib/asio-1.18.1/include/asio/impl/: read_at.hpp  spawn.hpp  use_awaitable.hpp
net-client-server/lib/asio-1.18.1/include/asio/ip/: basic_resolver.hpp
(+26 files in other folders)
